--- a/front/package.json
+++ b/front/package.json
@@ -13,13 +13,17 @@
     "@types/jest": "^27.5.2",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^18.2.7",
+    "@types/react-tooltip": "^4.2.4",
     "axios": "^1.4.0",
     "dotenv": "^16.3.1",
     "react": "^18.2.0",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.14.2",
     "react-scripts": "5.0.1",
+    "react-tooltip": "^5.19.0",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
