--- a/front/package.json
+++ b/front/package.json
@@ -11,6 +11,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.5.2",
+    "@types/lodash": "^4.14.196",
     "@types/node": "^16.18.38",
     "@types/react": "^18.2.15",
     "@types/react-chartjs-2": "^2.5.7",
@@ -20,6 +21,7 @@
     "axios": "^1.4.0",
     "chart.js": "^4.3.2",
     "dotenv": "^16.3.1",
+    "lodash": "^4.17.21",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-copy-to-clipboard": "^5.1.0",
