--- a/back/package.json
+++ b/back/package.json
@@ -4,7 +4,8 @@
   "description": "Backend of votepoll web aplication",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "deploy": "firebase deploy --only functions:api"
   },
   "repository": {
     "type": "git",
@@ -24,6 +25,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongodb": "^5.7.0"
+    "mongodb": "^5.7.0",
+    "firebase-admin": "^11.8.0",
+    "firebase-functions": "^4.3.1"
+  },
+  "engines": {
+    "node": "18"
   }
 }
